[gd_scene load_steps=13 format=2]

[ext_resource path="res://assets/objects/cocainebag.png" type="Texture" id=1]
[ext_resource path="res://scr/objects/CokeBag.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 64, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 0, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 32, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 64, 32, 32, 32 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 0, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 32, 64, 32, 32 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 64, 64, 32, 32 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ null, SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "drop_coke",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 10, 10.118 )

[node name="CokeBag" type="Area2D"]
collision_layer = 32
script = ExtResource( 2 )

[node name="coke_bag" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="drop_coke" type="AnimatedSprite" parent="."]
position = Vector2( -0.0151644, 48.011 )
frames = SubResource( 9 )
animation = "drop_coke"
offset = Vector2( 0, -16 )

[node name="player_hitbox" type="CollisionShape2D" parent="."]
scale = Vector2( 1.64, 1.64 )
shape = SubResource( 10 )

[node name="RespawnTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="UseTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
scale = Vector2( 1.88433, 1.88433 )
process_parent = true
physics_process_parent = true
[connection signal="body_entered" from="." to="." method="_on_CokeBag_body_entered"]
